--- a/destinations.html
+++ b/destinations.html
@@ -13,8 +13,8 @@
       <div class="logo">America<span>Tour</span></div>
       <ul>
         <li><a href="index2.html">Home</a></li>
-        <li><a href="destinations.html" class="active">Destinations</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="destinations" class="active">Destinations</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
