--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
       <div class="logo">America<span>Tour</span></div>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="destinations.html">Destinations</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="./" class="active">Home</a></li>
+        <li><a href="destinations">Destinations</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
