--- a/destinations.html
+++ b/destinations.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="logo">America<span>Tour</span></div>
       <ul>
-        <li><a href="index2.html">Home</a></li>
+        <li><a href="./">Home</a></li>
         <li><a href="destinations" class="active">Destinations</a></li>
         <li><a href="contact">Contact</a></li>
       </ul>
