--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
     <nav>
       <div class="logo">America<span>Tour</span></div>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="destinations.html">Destinations</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="destinations">Destinations</a></li>
+        <li><a href="contact" class="active">Contact</a></li>
       </ul>
       <div class="menu-toggle">
         <i class="fas fa-bars"></i>
