--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="footer-section">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="index2.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="destinations.html">Destinations</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
